--- a/package.json
+++ b/package.json
@@ -1,4 +1,21 @@
 {
+  "name": "todos",
+  "version": "1.0.0",
+  "description": "A simple todo list.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wkktoria/todos.git"
+  },
+  "author": "wkktoria",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/wkktoria/todos/issues"
+  },
+  "homepage": "https://github.com/wkktoria/todos#readme",
   "devDependencies": {
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
